tests/interactive/scrolling.js
@@ -8,11 +8,17 @@ const UI = imports.testcommon.ui;
 UI.init();
 let stage = Clutter.Stage.get_default();
 
-let v = new St.ScrollView({});
-stage.add_actor(v);
+let vbox = new St.BoxLayout({ vertical: true,
+                              width: stage.width,
+                              height: stage.height,
+                              style: "padding: 10px;" });
+stage.add_actor(vbox);
+
+let v = new St.ScrollView();
+vbox.add(v, { expand: true });
+
 let b = new St.BoxLayout({ vertical: true,
-                           width: stage.width,
-                           height: stage.height });
+                           style: "border: 2px solid #880000; border-radius: 10px; padding: 0px 5px;" });
 v.add_actor(b);
 
 let cc_a = "a".charCodeAt(0);
@@ -20,9 +26,16 @@ let s = "";
 for (let i = 0; i < 26 * 3; i++) {
     s += String.fromCharCode(cc_a + i % 26);
 
-    let t = new St.Label({ "text": s});
+    let t = new St.Label({ text: s,
+                           reactive: true });
+    let line = i + 1;
+    t.connect('button-press-event',
+              function() {
+                  log("Click on line " + line);
+              });
     b.add(t);
 }
 
 stage.show();
 Clutter.main();
+stage.destroy();
